# pyfintracker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  release-please.yml  sync-main-tag.yml
.opencode/: test-capabilities.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_multi_currency_schema.py  0003_tags.py  0004_search.py  0005_recurring.py  0006_budgets.py
openspec/: config.yaml
openspec/changes/archive/finance-tracker/: design.md  proposal.md  tasks.md  verify-pr5-repl.md
openspec/changes/finance-tracker/: spec.md  tasks.md
openspec/changes/multi-moneda/: design.md  explore.md  proposal.md  spec.md  tasks.md
scripts/: README_prototype.md  prototype_tui.py
src/pyfintracker/: cli.py  config.py  db.py  exceptions.py  fx.py  models.py  money.py  reports.py  repository.py  tui.py  tui_screens.py  validation.py
tests/: conftest.py
tests/component/: test_tui_spike.py
tests/integration/: test_acceptance.py  test_budgets_cli.py  test_cli_account.py  test_cli_add.py  test_cli_add_repl.py  test_cli_balance.py  test_cli_config.py  test_cli_convert.py  test_cli_init.py  test_cli_migrate.py  test_cli_opening_balance.py  test_cli_report_month.py  test_cli_version.py  test_db.py  test_decimal_stored_as_text.py  test_error_ux.py  test_exit_codes.py  test_fx_cache.py  test_migrations.py  test_rates_repo.py  test_recurring_cli.py  test_reports_multi_currency.py  test_repository.py  test_search_cli.py  test_tags_cli.py  test_transactions_repo.py
tests/property/: test_account_regex.py  test_convert_aggregate_identity.py  test_convert_quantization.py  test_decimal_quantization.py  test_decimal_text_roundtrip.py  test_double_entry_invariant.py  test_historical_ttl.py  test_opening_balance.py  test_rate_roundtrip.py
tests/snapshots/: test_reports_snap.py
tests/unit/: conftest.py  test_balance_report.py  test_budgets.py  test_config.py  test_conftest.py  test_decimal_as_text.py  test_exceptions.py  test_fx_client.py  test_imports.py  test_models.py  test_money.py  test_money_columns_text.py  test_monthly_report.py  test_no_float_amounts.py  test_no_raw_currency_sum.py  test_prefetch.py  test_recurring.py  test_repl.py  test_reports.py  test_repository.py  test_tags.py  test_to_lines.py  test_validation.py
