[project]
name = "pyfintracker"
version = "0.1.0"
description = "Personal finance CLI with strict double-entry bookkeeping"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Juan Sebastian Gonzalez", email = "jsebastiangb.12@gmail.com" },
]
keywords = ["finance", "cli", "double-entry", "accounting", "personal-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]

dependencies = [
    "alembic>=1.18.5",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.27.0",
]

[project.scripts]
fin = "pyfintracker.cli:app"

[project.urls]
Homepage = "https://github.com/JuanSebastianGB/pyfintracker"
Issues = "https://github.com/JuanSebastianGB/pyfintracker/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.156.6",
    "syrupy>=5.5.3",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
    "mutmut>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfintracker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.mutmut]
source_paths = ["src/"]
also_copy = ["alembic.ini", "migrations/"]
pytest_add_cli_args_test_selection = ["tests/"]
pytest_add_cli_args = [
    "-q",
    "-x",
    "--hypothesis-profile=mutmut",
    "-o",
    "addopts=--strict-markers --strict-config",
]
type_check_command = [
    "mypy",
    "src",
    "--output",
    "json",
    "--disable-error-code",
    "unused-ignore",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=pyfintracker",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
markers = [
    "unit: pure logic tests, no I/O",
    "integration: full DB or CLI roundtrip",
    "property: hypothesis-driven invariant tests",
    "snapshot: report output regression tests",
]

[tool.coverage.run]
source = ["src/pyfintracker"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
